--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,9 @@ jobs:
           echo "2: $version"
           version_line_num=$(grep -n '^version' gradle.properties | cut -d ":" -f1)
           
-
+          echo "3: $version_line_num"
           sed -i "s/\(badge\/version-v.*-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
-          sed -u "s/\(properties#L.*)properties#L$version_line_num" README.md
+          sed -u "s/\(properties\#L.*)properties\#L$version_line_num" README.md
 
       - name: Create PR
         id: create-pr
