--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # man im insaannee
+#
+#
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
@@ -20,5 +22,4 @@ android.useAndroidX=true
 # resources declared ipn the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=false
-# 
-version = 1.7-pup1
+version = 1.7-pupo1
