--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,12 @@ jobs:
 
       - name: Update README Badge
         run: |
-          version_command=$(grep -n '^version' gradle.properties)
-          version=$($version_command | cut -d= -f2 | tr -d '[:space:]')
+          version_command=$()
+          version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
           echo "1: $version"
           version=$(echo "$version" | sed 's/-/%E2%80%90/g')
           echo "2: $version"
-          version_line_num=$($version_command | cut -d ":" -f1)
+          version_line_num=$(grep -n '^version' gradle.properties | cut -d ":" -f1)
           
           echo "3: $version_line_num"
           sed -i "s/\(badge\/version-v.*-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
