--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -54,7 +54,8 @@ jobs:
           echo "Current version: ${{ steps.get-current-version.outputs.current_version }}"
           if [ "${{ steps.get-previous-version.outputs.prev_version }}" = "${{ steps.get-current-version.outputs.current_version }}" ]; then
             echo "No version change. Exiting workflow."
-            echo "::set-env name=SKIP_NEXT_STEPS::true"
+            echo "{SKIP_NEXT_STEPS}={true}" >> "$SKIP_NEXT_STEPS"
+            # echo "::set-env name=SKIP_NEXT_STEPS::true"
           fi
 
       - name: Update README Badge
@@ -79,11 +80,6 @@ jobs:
           body: ${{ env.COMMIT_MESSAGE }}
           commit-message: ${{ env.COMMIT_MESSAGE }}
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Disable Auto-Close on Merge
-        run: gh config set prompt true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Turn On PR Auto-Merge
         if: env.SKIP_NEXT_STEPS != 'true'
