--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,5 @@ android.useAndroidX=true
 # resources declared ipn the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=false
-#test
+#test1
 version = 1.3-beta
