--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -54,7 +54,7 @@ jobs:
           echo "Current version: ${{ steps.get-current-version.outputs.current_version }}"
           if [ "${{ steps.get-previous-version.outputs.prev_version }}" = "${{ steps.get-current-version.outputs.current_version }}" ]; then
             echo "No version change. Exiting workflow."
-            echo "{SKIP_NEXT_STEPS}={true}" >> "$SKIP_NEXT_STEPS"
+            echo "SKIP_NEXT_STEPS=true" >> $GITHUB_ENV
             # echo "::set-env name=SKIP_NEXT_STEPS::true"
           fi
 
