--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -35,12 +35,15 @@ jobs:
           commit_hashes=$(git rev-list -n 2 origin/main -- gradle.properties)
           second_last_commit_hash=$(echo "$commit_hashes" | tail -n 1)
           previous_version=$(git show $second_last_commit_hash:gradle.properties | grep '^version' | cut -d= -f2 | tr -d '[:space:]')
+          previous_line = $(git show $second_last_commit_hash:gradle.properties | grep -n '^version' | cut -d ":" -f1)
           echo "::set-output name=prev_version::$previous_version"
+          echo "::set-output name=prev_line::$previous_line"
 
       - name: Get current version
         id: get-current-version
         run: |
           echo "::set-output name=current_version::$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')"
+          echo "::set-output name=current_line::$(grep -n '^version' gradle.properties | cut -d ":" -f1)"
 
       - name: Check for version change
         run: |
@@ -49,13 +52,21 @@ jobs:
             echo "SKIP_NEXT_STEPS=true" >> $GITHUB_ENV
           fi
 
+          if [ "${{ steps.get-previous-version.outputs.prev_line }}" = "${{ steps.get-current-version.outputs.current_line }}" ]; then
+            echo "No line change.
+            echo "LINE_NOT_CHANGED=true" >> $GITHUB_ENV
+          fi
+
       - name: Update README Badge
         if: env.SKIP_NEXT_STEPS != 'true'
         run: |
           version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
+          current_line = $(grep -n '^version' gradle.properties | cut -d ":" -f1)
           version=$(echo "$version" | sed 's/-/%E2%80%90/g')
           echo "$version"
           sed -i "s/\(badge\/version-v.*-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
+          if [env.LINE_NOT_CHANGED != 'true']; then
+            sed -i "s/\(badge\/version-v[^-]*-blue\.svg[^#]*#L\)[0-9]\+/\1${current_line}/" README.md
           cat README.md
 
       - name: Create PR
