--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -64,7 +64,9 @@ jobs:
           current_line = $(grep -n '^version' gradle.properties | cut -d ":" -f1)
           version=$(echo "$version" | sed 's/-/%E2%80%90/g')
           echo "$version"
-          sed -i "s/\(badge\/version-v.*-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
+          echo "$current_line"
+          if [env.SKIP_NEXT_STEPS != 'true']; then
+            sed -i "s/\(badge\/version-v.*-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
           if [env.LINE_NOT_CHANGED != 'true']; then
             sed -i "s/\(badge\/version-v[^-]*-blue\.svg[^#]*#L\)[0-9]\+/\1${current_line}/" README.md
           cat README.md
