--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # man im insaannee, yeah its true
+# man im insaannee, yeah its true
 #
 #
 #
