--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -71,7 +71,8 @@ jobs:
         run: |
           current_line=$(grep -n '^version' gradle.properties | cut -d ":" -f1)
           echo "$current_line"
-          sed -i "s/\(badge\/version-v[^-]*-blue\.svg[^#]*#L\)[0-9]\+/\1${current_line}/" README.md
+          # sed -i "s/\(#L.*)[0-9]\+/\1${current_line}/" README.md
+          sed -i "s/#L.*/#L$current_line/" README.md
           cat README.md
 
       - name: Create PR
