--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -3,13 +3,7 @@ description: 'Launches an Android emulator and runs the input script'
 inputs:
   script:
     description: 'Script runs after successful launch of the emulator'
-
-defaults:
-  run:
-    shell: bash
-
-env:
-  ANDROID_BUILD_TOOLS_VERSION: 30.0.2
+    required: false
 
 runs:
   using: 'composite'
@@ -17,7 +11,7 @@ runs:
       - name: Set Up Required Path System Variables for essential tools
         # Adds path for essential tools like sdkmanager, avdmanager, emulator, etc.
         run: |
-            echo "$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/${{ env.ANDROID_BUILD_TOOLS_VERSION }}" >> $GITHUB_PATH
+            echo "$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/30.0.2" >> $GITHUB_PATH
         shell: bash
 
       - name: SDK package licenses agreement
@@ -67,6 +61,7 @@ runs:
           ./gradlew installDebug
         shell: bash
 
-      - name: Run script
+      - name: Run script if provided
+        if: inputs.script != "
         run: bash -c "${{ inputs.script }}"
         shell: bash
